--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="assets/task-management-logo.png" alt="">
+    <img src="task-management-logo.png" alt="">
    <div>
     <h1>Easy Task</h1>
     <p>Enterprise wise management</p>
