--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <app-header />
 <main>
     <ul id="users">
-        @for (user of users; track user.id) {
-        <li>
+        <!-- @for (user of users; track user.id) { -->
+        <li *ngFor="let user of users">
             <app-user [user]="user" (select)="onSelectUser($event)" />
         </li>
-        }
+        <!-- } -->
     </ul>
     @if(selectedUser)
     {
