--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,13 @@
         </li>
         <!-- } -->
     </ul>
-    @if(selectedUser)
-    {
-    <app-tasks [name]="selectedUser.name" />
-    }
-    @else {
-    <p id="fallback">Select a user to see their tasks!</p>
-    }
+    <!-- @if(selectedUser)
+    { -->
+    <app-tasks *ngIf="selectedUser else fallback" [name]="selectedUser.name" />
+    <!-- } -->
+    <!-- @else { -->
+    <ng-template #fallback>
+        <p id="fallback">Select a user to see their tasks!</p>
+    </ng-template>
+    <!-- } -->
 </main>
