--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -8,7 +8,7 @@
     <ul>
         @for (task of selectedUsersTasks; track task.id){
         <li>
-            <app-task [task]="task"/>
+            <app-task [task]="task" (complete)="onCompleteTask($event)"/>
         </li>
         }
     </ul>
