--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop"></div>
+<div class="backdrop" (click)="cancledClick()"></div>
 <dialog open>
   <h2>Add Task</h2>
   <form>
@@ -6,8 +6,7 @@
       <label for="title">Title</label>
       <input type="text" id="title" name="title" />
     </p>
-
-    <p>
+        <p>
       <label for="summary">Summary</label>
       <textarea id="summary" rows="5" name="summary"></textarea>
     </p>
@@ -18,7 +17,7 @@
     </p>
 
     <p class="actions">
-      <button type="button">Cancel</button>
+      <button type="button" (click)="cancledClick()">Cancel</button>
       <button type="submit">Create</button>
     </p>
   </form>
