--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,6 +1,6 @@
 @if(isAddingTask)
 {
-    <app-new-task></app-new-task>
+    <app-new-task (cancel)="onCancel()"></app-new-task>
 }
 <section id="tasks">
     <header>
@@ -12,7 +12,7 @@
     <ul>
         @for (task of selectedUsersTasks; track task.id){
         <li>
-            <app-task [task]="task" (complete)="onCompleteTask($event)"/>
+            <app-task [task]="task" (complete)="onCompleteTask($event)" />
         </li>
         }
     </ul>
