--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop" (click)="cancledClick()"></div>
+<div class="backdrop" (click)="closedClick()"></div>
 <dialog open>
   <h2>Add Task</h2>
   <form (ngSubmit)="onSubmmit()">
@@ -17,7 +17,7 @@
     </p>
 
     <p class="actions">
-      <button type="button" (click)="cancledClick()">Cancel</button>
+      <button type="button" (click)="closedClick()">Cancel</button>
       <button type="submit">Create</button>
     </p>
   </form>
