--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -12,7 +12,7 @@
     <ul>
         @for (task of selectedUsersTasks; track task.id){
         <li>
-            <app-task [task]="task" (complete)="onCompleteTask($event)" />
+            <app-task [task]="task"/>
         </li>
         }
     </ul>
